[gd_scene load_steps=4 format=2]

[ext_resource path="res://ParameciumWiggle.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[node name="Paramecium" type="MeshInstance"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
mesh = SubResource( 1 )
script = ExtResource( 1 )

[node name="Info" type="ColorRect" parent="."]
visible = false
margin_right = 201.0
margin_bottom = 162.0
color = Color( 0, 0, 0, 1 )

[node name="Name" type="Label" parent="Info"]
margin_left = 17.0
margin_top = 30.0
margin_right = 97.0
margin_bottom = 44.0
text = "Paramecium"

[node name="Attack" type="Label" parent="Info"]
margin_left = 17.0
margin_top = 66.0
margin_right = 65.0
margin_bottom = 80.0
text = "Attack: "

[node name="Defense" type="Label" parent="Info"]
margin_left = 17.0
margin_top = 95.0
margin_right = 86.0
margin_bottom = 109.0
text = "Defense: "

[node name="Traits" type="Label" parent="Info"]
margin_left = 17.0
margin_top = 124.0
margin_right = 57.0
margin_bottom = 138.0
text = "Traits:"

[node name="Team" type="Label" parent="Info"]
margin_left = 126.0
margin_top = 6.0
margin_right = 190.0
margin_bottom = 20.0
text = "Opponent"

[node name="Choices" type="ColorRect" parent="Info"]
visible = false
margin_left = 200.0
margin_top = 38.0
margin_right = 354.0
margin_bottom = 146.0
color = Color( 0, 0, 0, 1 )

[node name="Attack" type="Button" parent="Info/Choices"]
margin_left = 19.0
margin_top = 11.0
margin_right = 71.0
margin_bottom = 31.0
mouse_default_cursor_shape = 2
text = "Attack"

[node name="UseAbility" type="Button" parent="Info/Choices"]
margin_left = 19.0
margin_top = 43.0
margin_right = 109.0
margin_bottom = 63.0
mouse_default_cursor_shape = 2
text = "Use ABILITY"

[node name="Cancel" type="Button" parent="Info/Choices"]
margin_left = 19.0
margin_top = 75.0
margin_right = 71.0
margin_bottom = 95.0
mouse_default_cursor_shape = 2
text = "Cancel"

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
